web3cache-subscriptions/deployment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web3cache
  name: web3cache-subscriptions
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:059934112511:certificate/0911c9e1-b94c-4bfd-9913-3eabf4e54544
    alb.ingress.kubernetes.io/group.name: "web3cache-dev"
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  rules:
    - host: web3cache.playtest.link
      http:
        paths:
          - path: /web3cache/events/
            pathType: Prefix
            backend:
              service:
                name: web3cache-subscriptions-service
                port:
                  number: 443
